--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title> Med folio </title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+
     <style type="text/css">
     *,
     *::before,
@@ -423,7 +424,8 @@
       <section class="contact" id="contact">
         <h2>Contact</h2>
         <div class="container">
-          <form action="">
+            <form action="https://formspree.io/mohamedtounsi88@hotmail.com" method="POST">
+
             <label for="name">Name</label>
             <input type="text" id="name" name="name">
             <label for="email">E-mail</label>
@@ -432,6 +434,7 @@
             <textarea name="message" id="message" style="height: 200px"></textarea>
             <input type="submit" value="message">
           </form>
+
         </div>
       </section>
       <footer>
@@ -443,6 +446,7 @@
         <section class="bottom-bar">
           <p>&copy 2020 | All rights reserved</p>
         </footer>
+
 
       </body>
     </html>
