add social media

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title> Med folio </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 
@@ -247,7 +248,7 @@
     }
     .top-bar a:hover{
     transform: scale(1.1);
-    color: #009688;
+    color: #ee8572;
     }
     .bottom-bar {
     background:#000;
@@ -439,9 +440,9 @@
       </section>
       <footer>
         <section class="top-bar">
-          <a href=""><i class="fab fa-facebook-f"></i></a>
-          <a href=""><i class="fab fa-twitter"></i></a>
-          <a href=""><i class="fab fa-github"></i></a>
+          <a href="https://www.facebook.com/momo.chi.5494"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+          <a href="https://github.com/Med-Shenlong"><i class="fa fa-github" aria-hidden="true"></i></a>
+          <a href="https://www.linkedin.com/in/mohamed-tounsi-b67b9617a/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
         </section>
         <section class="bottom-bar">
           <p>&copy 2020 | All rights reserved</p>
