--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
     </nav>
     <main>
       <header class="home" id="home"><br><br>
-        <h1>I'm Mohamed Tounsi</h1>
+        <h1>Mohamed Tounsi</h1>
         <h5>Web Developer // Designer</h5>
         <img src="med.jpg" alt="">
       </header>
