--- a/index.html
+++ b/index.html
@@ -365,23 +365,23 @@
       <h3>My Skills</h3>
       <p>Ruby on Rails</p>
       <div class="container">
-        <div class="skills rails">70%</div>
+        <div class="skills React Js">80%</div>
       </div>
       <p>html 5</p>
       <div class="container">
-        <div class="skills html">95%</div>
+        <div class="skills Html">95%</div>
       </div>
       <p>CSS 3</p>
       <div class="container">
-        <div class="skills css">85%</div>
+        <div class="skills Css">90%</div>
       </div>
       <p>Javascript</p>
       <div class="container">
-        <div class="skills javascript">60%</div>
+        <div class="skills javascript">80%</div>
       </div>
       <p>Figma</p>
       <div class="container">
-        <div class="skills figma">90%</div>
+        <div class="skills Ruby in Rails">70%</div>
       </div>
       <section class="folio" id="folio">
         <h2>Folio</h2>
