--- a/index.html
+++ b/index.html
@@ -363,25 +363,25 @@
         as well
       </p>
       <h3>My Skills</h3>
-      <p>React Js</p>
+      <p>Rails</p>
       <div class="container">
-        <div class="skills React Js">80%</div>
+        <div class="skills rails">80%</div>
       </div>
-      <p>html</p>
+      <p>React</p>
       <div class="container">
         <div class="skills html">95%</div>
       </div>
-      <p>CSS</p>
+      <p>Javascript</p>
       <div class="container">
         <div class="skills css">90%</div>
       </div>
-      <p>Javascript</p>
+      <p>Css</p>
       <div class="container">
         <div class="skills javascript">80%</div>
       </div>
-      <p>Ruby On Rails</p>
+      <p>React</p>
       <div class="container">
-        <div class="skills Ruby On Rails">70%</div>
+        <div class="skills figma">70%</div>
       </div>
       <section class="folio" id="folio">
         <h2>Folio</h2>
