--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         as well
       </p>
       <h3>My Skills</h3>
-      <p>Rails</p>
+      <p>Html</p>
       <div class="container">
         <div class="skills rails">80%</div>
       </div>
@@ -375,11 +375,11 @@
       <div class="container">
         <div class="skills css">90%</div>
       </div>
-      <p>Css</p>
+      <p>Rails</p>
       <div class="container">
-        <div class="skills javascript">80%</div>
+        <div class="skills javascript">60%</div>
       </div>
-      <p>React</p>
+      <p>Css</p>
       <div class="container">
         <div class="skills figma">70%</div>
       </div>
